Change History
==============

1.7dev Unreleased
-----------------


1.7a1 2010-12-28
----------------

- Move quickedit functionality into a separate view rather than a
  JavaScript manipulation of the standard view.
  [stevem]

- Put the css, especially extra css for specific fields, into the
  style_slot.
  Fixes http://plone.org/products/ploneformgen/issues/299
  [maurits]

- Added simple translation layer for messages embedded in JS.
  [stevem]

- Remove 2.5 support setup profile and templates. 2.5 hasn't been supported since
  1.6. Stripped all the "not HAS_PLONE30" code.
  [stevem]

- Get validator.js from plone.app.jquerytools. This requires plone.app.jquerytools>=1.2dev.
  1.2dev is available as p.a.jqt's svn trunk at this moment.
  [stevem]

- Move some of the .js and .css resources into a browser resource directory
  to begin cutting down on the namespace clutter.
  [stevem]

- Merged Manca's GSOC branch (-r 118406:123569)
  [stevem]

- javascript based validator using "validator" plugin for jQueryTools
  (Manca)

- added widgets manager pane in quick edit mode
  (Manca)

- new styles for form and widgets manager
  (Manca)

- Fixed Thanks pages radio buttons, where all inputs had their own forms, instead of only one
  (Manca)

- Fixed ordering of fields in edit mode. Another request was sent to server when the "exit edit mode" button was pressed
  (Manca)

- Implemented jQuery UI plugin for better sorting, dragging and dropping fields
  (Manca)

- On the fly editing Field Titles (by double clicking on its label)
  (Manca)

- Ajax feedback image for all the ajax based actions (near Widgets Manager header)
  (Manca)

- Edit and Delete table columns merged under one called "Actions"
  (Manca)

- Added on the fly toggling of required attribute for available fields
  (Manca)

- Optimized code for ajax requests
  (Manca)

- Widgets in widget manager stylized
  (Manca)

- Added tooltip for each widget to show its description
  (Manca)
