@@ -56,7 +56,7 @@
     </script>
     <script src="jquery-ui-1.8.2.custom.min.js"
         type="text/javascript"
-        tal:attributes="src string:$portal_url/++resource++jquery-ui-1.8.min.js"
+        tal:attributes="src string:$portal_url/++resource++jquery-ui.min.js"
         tal:condition="python:checkPermission('Modify portal content', here) and here.portal_type=='FormFolder'">
     </script>
     
