@@ -1,8 +1,9 @@
 <?xml version="1.0"?>
 <metadata>
-  <version>1.7a1</version>
+  <version>170</version>
   <dependencies>
       <dependency>profile-plone.app.jquerytools:default</dependency>
+      <dependency>profile-collective.js.jqueryui:default</dependency>
   </dependencies>
 </metadata>
 
