@@ -3,3 +3,12 @@ extends =
     http://svn.plone.org/svn/collective/buildout/plonetest/plone-4.0.x.cfg
 
 package-name = Products.PloneFormGen
+
+extensions=mr.developer
+auto-checkout=
+    plone.app.jquerytools
+    collective.js.jqueryui
+
+[sources]
+plone.app.jquerytools = svn http://svn.plone.org/svn/plone/plone.app.jquerytools/trunk/
+collective.js.jqueryui = svn https://svn.plone.org/svn/collective/collective.js.jqueryui/trunk/
